Test/typing/should_fail/array_0.java
package tutu.titi.toto;

class A {

	public void method1() {
		int realint, bugnotanarray[];
		realint = 2;
		bugnotanarray = 4;
	}
}
